--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web3-ssl-ext-lib",
-  "version": "0.1.4",
+  "name": "web3-ssl-ext",
+  "version": "0.2.0",
   "description": "httpsprovider for web3js",
   "main": "index.js",
   "scripts": {
@@ -22,6 +22,6 @@
   },
   "homepage": "https://github.com/jslee99a/web3-ssl-ext#readme",
   "dependencies": {
-    "web3": "^1.0.0-beta.34"
+    "web3": "^0.20.6"
   }
 }
